src/sass/components/_menu.scss
.main-menu {
  @include flex-vertical-center;

  @include max-screen($menu-mobile-breakpoint) {
    opacity: 0;
    pointer-events: none;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.9);
    z-index: 100;
    transition: 0.2s;
    flex-direction: column;
    padding: 100px 16px 0;
  }

  &.open {
    opacity: 1;
    pointer-events: all;
  }

  ul.menu {
    list-style-type: none;
    margin: 0;
    display: flex;
    flex-wrap: wrap;

    @include max-screen($menu-mobile-breakpoint) {
      display: block;
      width: 100%;
      float: none;
    }

    li {
      margin: 0 20px;
      @include flex-vertical-center;

      @include max-screen($menu-mobile-breakpoint) {
        display: block;
        margin: 0;
      }

      a {
        font-size: 1rem;
        font-weight: 400;
        display: block;
        color: $menu-link;
        text-decoration: none;
        position: relative;

        @include link-hover {
          color: $menu-link-hover;
          transition: $transition-time;
        }

        @include max-screen($menu-mobile-breakpoint) {
          color: $white;
          padding: 10px 0;
          font-size: 1.5rem;
        }
      }
    }
  }
}

